# omni_transcriber

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
src/: config.py  main.py
src/bot/: bot.py  handlers.py  middleware.py
src/services/: downloader.py  editor.py  pdf_generator.py  transcriber.py  youtube.py
src/utils/: retry.py  settings_store.py  url_parser.py
